Sat Sep 30 03:28:19 BST 2006  Olly Betts <olly@survex.com>

	* ruby/Makefile.am: Add dependencies and clean rules for xapian.rb.

Sat Sep 30 03:22:10 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Look for ruby interpreter as "ruby1.8" since it's
	  called that (with no "ruby" alias) on Ubuntu dapper at least.

Sat Sep 30 03:03:30 BST 2006  Olly Betts <olly@survex.com>

	* python/docs/examples/simplematchdecider.py: Fix typo in comment.

Sat Sep 30 03:01:22 BST 2006  Olly Betts <olly@survex.com>

	* python/Makefile.am: Prefer $(PYTHON_MODERN_OR_OLDE) to
	  @PYTHON_MODERN_OR_OLDE@.  No need to list xapian_wrap.h in
	  _xapian_la_SOURCES.

Sat Sep 30 03:00:01 BST 2006  Olly Betts <olly@survex.com>

	* php/Makefile.am: When running smoketest.php, pass the "-q" option,
	  which suppresses HTTP header output for PHP < 4.3 and is ignored for
	  compatibility by more recent versions of PHP.

Sat Sep 30 02:57:24 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac,php/Makefile.am: Build PHP bindings for both PHP4 and
	  PHP5 (using SWIG's new support for generating OO PHP5 wrappers).

Sat Sep 30 02:41:23 BST 2006  Olly Betts <olly@survex.com>

	* python/smoketest.py: Added missing "sys.exit(1)" in
	  TermIter.skip_to() test.  Run exception handling tests and test for
	  OP_ELITE_SET value whatever the python version is.  Add test that
	  MatchDecider can be subclassed successfully.

Fri Sep 29 10:06:37 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Fix typo - PHP_tried should be PHP_found.  This might
	  have caused the PHP interpreter not to be found in some cases when
	  it was actually available, but it's only use to run the smoketest
	  not for building the bindings.

Fri Sep 29 07:02:10 BST 2006  Olly Betts <olly@survex.com>

	* tcl8/smoketest.tcl: Add comment about Tcl storing zero bytes as
	  \xc0\x80.

Thu Sep 28 15:05:07 BST 2006  Olly Betts <olly@survex.com>

	* python/extra.i,python/smoketest.py: Wrap TermIterator::skip_to().
